<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".shortcuts.ui.UninstallActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close_grey_24"
            app:navigationIconTint="@color/black"
            app:title="@string/uninstall"
            app:titleCentered="true"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/quarter_common_margin"
            android:layout_margin="@dimen/common_margin"
            app:cardCornerRadius="@dimen/main_card_corner_radius">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_top">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uninstall_title"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/uninstall_message"
                    android:textColor="@color/black"
                    android:lineSpacingExtra="7dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOptionsQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:text="@string/uninstall_option_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMessage" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleGroupOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOptionsQuestion"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOption1"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/uninstall_option1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOption2"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/uninstall_option2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOption3"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/uninstall_option3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOption4"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/uninstall_option4" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOption5"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/uninstall_option5" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    app:boxCornerRadiusBottomEnd="@dimen/common_margin"
                    app:boxCornerRadiusBottomStart="@dimen/common_margin"
                    app:boxCornerRadiusTopEnd="@dimen/common_margin"
                    app:boxCornerRadiusTopStart="@dimen/common_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:counterEnabled="true"
                    app:counterMaxLength="300"
                    app:layout_constraintTop_toBottomOf="@id/toggleGroupOptions">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:maxLength="300"
                        android:textSize="16sp"
                        android:hint="Let us know your whispers of wisdom..."
                        android:minLines="4" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Have you made up your mind?"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnUninstall"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUninstall"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/half_common_margin"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/uninstall"
        app:strokeColor="@color/green_primary"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnStay"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStay"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        android:text="Stay for a while"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/btnUninstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnUninstall"
        app:layout_constraintTop_toTopOf="@id/btnUninstall" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_margin"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:text="Submit"
        android:textAllCaps="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnUninstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnUninstall"
        app:layout_constraintTop_toTopOf="@id/btnUninstall" />

</androidx.constraintlayout.widget.ConstraintLayout>