<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".home.ui.HomeFragment">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_app_icon"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAppName"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gentium_basic_bold"
        android:text="@string/app_name"
        android:textColor="@color/green_primary_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tvAppDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gentium_basic_bold"
        android:text="@string/app_desc"
        android:textColor="@color/green_primary_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dr_home_background_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_margin"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginTop="@dimen/double_common_margin"
        android:clickable="true"
        android:focusable="true"
        android:transitionName="@string/anim_search"
        app:cardCornerRadius="@dimen/half_common_margin"
        app:cardElevation="@dimen/half_common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/common_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_search_grey_24"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_top"
                android:layout_weight="1"
                android:text="@string/search_hint"
                android:textColor="@color/light_text"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/double_common_margin"
        android:layout_marginTop="@dimen/double_common_margin"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardSearch" />

    <ImageView
        android:id="@+id/btnBookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:background="@drawable/bg_selectable_primary"
        android:padding="@dimen/common_margin"
        android:src="@drawable/ic_bookmarks_white_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>