<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/double_common_margin"
    android:paddingHorizontal="@dimen/half_common_margin"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iconBookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmarks_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragHandleView"
        android:layout_margin="@dimen/common_margin"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmarks"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/iconBookmarks"
        app:layout_constraintBottom_toBottomOf="@id/iconBookmarks"
        app:layout_constraintStart_toEndOf="@id/iconBookmarks"
        android:layout_marginStart="@dimen/double_common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <ImageView
        android:id="@+id/iconHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_history_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconBookmarks"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/double_common_margin"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/iconHistory"
        app:layout_constraintBottom_toBottomOf="@id/iconHistory"
        app:layout_constraintStart_toEndOf="@id/iconHistory"
        android:layout_marginStart="@dimen/double_common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <ImageView
        android:id="@+id/iconRandomWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_book_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconHistory"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/double_common_margin"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRandomWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_word"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/iconRandomWord"
        app:layout_constraintBottom_toBottomOf="@id/iconRandomWord"
        app:layout_constraintStart_toEndOf="@id/iconRandomWord"
        android:layout_marginStart="@dimen/double_common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <ImageView
        android:id="@+id/iconAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconRandomWord"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/double_common_margin"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/iconAbout"
        app:layout_constraintBottom_toBottomOf="@id/iconAbout"
        app:layout_constraintStart_toEndOf="@id/iconAbout"
        android:layout_marginStart="@dimen/double_common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>
