<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/half_common_margin"
    android:paddingBottom="@dimen/double_common_margin"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lytBookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selectable_white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragHandleView">

        <ImageView
            android:id="@+id/iconBookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:src="@drawable/ic_bookmarks_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/bookmarks"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selectable_white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytBookmarks">

        <ImageView
            android:id="@+id/iconHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:src="@drawable/ic_history_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytRandomWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/bg_selectable_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytHistory">

        <ImageView
            android:id="@+id/iconRandomWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:src="@drawable/ic_menu_book_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRandomWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/random_word"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_selectable_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytRandomWord">

        <ImageView
            android:id="@+id/iconAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:src="@drawable/ic_info_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
